@@ -10,9 +10,11 @@
 package cointoss;
 
 import java.io.BufferedWriter;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
@@ -36,9 +38,11 @@ public class Main implements HttpFunction {
         BufferedWriter writer = response.getWriter();
         writer.write(bitmex());
 
-        Path path = Path.of("gs://cointoss-function/2020-11-25 00.log");
-        String readString = Files.readString(path, StandardCharsets.UTF_8);
-        writer.write(readString);
+        Path path = Paths.get(URI.create("gs://cointoss-function/2020-11-25 00.log"));
+        List<String> lines = Files.readAllLines(path, StandardCharsets.UTF_8);
+        for (String line : lines) {
+            writer.write(line + "\r\n");
+        }
     }
 
     private String bitmex() {
